--- a/commerce/auctions/templates/auctions/fashion.html
+++ b/commerce/auctions/templates/auctions/fashion.html
@@ -1,6 +1,6 @@
 {% extends "auctions/layout.html" %} {% block body %}
 
-<main class="category-fashion" id="main">
+<main class="category category-fashion" id="main">
     <section class="category-section">
         <!-- ===== PARTIE Header ILLUSTRATION DE CATEGORY ===== -->
         <div class="category-header">
