--- a/commerce/auctions/templates/auctions/musical_instrument&gear.html
+++ b/commerce/auctions/templates/auctions/musical_instrument&gear.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %} {% block body %}
 
 
-<section class="category-section">
+<section id="main" class="category-section">
 	<!-- ===== PARTIE Header ILLUSTRATION DE CATEGORY ===== -->
 	<div class="category-header">
 		<img src="" alt="" />
