--- a/mail/mail/templates/mail/layout.html
+++ b/mail/mail/templates/mail/layout.html
@@ -19,6 +19,6 @@
 		{% block script %} {% endblock %}
 	</head>
 	<body>
-		<div class="container">{% block body %} {% endblock %}</div>
+		{% block body %} {% endblock %}
 	</body>
 </html>
