--- a/commerce/auctions/templates/auctions/motors.html
+++ b/commerce/auctions/templates/auctions/motors.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %} {% block body %}
 
 
-<section class="category-section">
+<main id="main" class="category category-section">
 	<!-- ===== PARTIE Header ILLUSTRATION DE CATEGORY ===== -->
 	<div class="category-header">
         <img 
@@ -409,7 +409,7 @@
 			<div class="about-category"></div>
 		</div>
 	</div>
-</section>
+</main>
 
 {% endblock %}
 
