--- a/commerce/auctions/templates/auctions/new_listing.html
+++ b/commerce/auctions/templates/auctions/new_listing.html
@@ -1,58 +1,61 @@
 {% extends "auctions/layout.html" %} {% block body %}
-<form
-	action="{% url 'new_listing' %}"
-	method="post"
-	enctype="multipart/form-data"
->
-	{% csrf_token %}
 
-	<!-- Title -->
-	<div class="form-group">
-		<label for="id_title">Title:</label>
-		<input type="text" name="title" id="id_title" required />
-	</div>
+<main id="main" class="new-listing-page">
+	<form
+		action="{% url 'new_listing' %}"
+		method="post"
+		enctype="multipart/form-data"
+	>
+		{% csrf_token %}
 
-	<!-- Category -->
-	<div class="form-group">
-		<label for="id_category">Category:</label>
-		<select name="category" id="id_category" required>
-			{% for choice in listing_form.category.field.choices %}
-			<option value="{{ choice.0 }}">{{ choice.1 }}</option>
-			{% endfor %}
-		</select>
-	</div>
+		<!-- Title -->
+		<div class="form-group">
+			<label for="id_title">Title:</label>
+			<input type="text" name="title" id="id_title" required />
+		</div>
 
-	<!-- Starting Bid -->
-	<div class="form-group">
-		<label for="id_starting_bid">Starting Bid:</label>
-		<input
-			type="number"
-			name="starting_bid"
-			id="id_starting_bid"
-			required
-			step="any"
-		/>
-	</div>
+		<!-- Category -->
+		<div class="form-group">
+			<label for="id_category">Category:</label>
+			<select name="category" id="id_category" required>
+				{% for choice in listing_form.category.field.choices %}
+				<option value="{{ choice.0 }}">{{ choice.1 }}</option>
+				{% endfor %}
+			</select>
+		</div>
 
-	<!-- Image -->
-	<div class="form-group">
-		<label for="id_image">Image:</label>
-		<input
-			type="file"
-			name="image"
-			id="id_image"
-			accept="image/*"
-			required
-		/>
-	</div>
+		<!-- Starting Bid -->
+		<div class="form-group">
+			<label for="id_starting_bid">Starting Bid:</label>
+			<input
+				type="number"
+				name="starting_bid"
+				id="id_starting_bid"
+				required
+				step="any"
+			/>
+		</div>
 
-	<!-- Description -->
-	<div class="form-group">
-		<label for="id_description">Description:</label>
-		<textarea name="description" id="id_description" required></textarea>
-	</div>
+		<!-- Image -->
+		<div class="form-group">
+			<label for="id_image">Image:</label>
+			<input
+				type="file"
+				name="image"
+				id="id_image"
+				accept="image/*"
+				required
+			/>
+		</div>
 
-	<!-- Submit Button -->
-	<input type="submit" value="create" />
-</form>
+		<!-- Description -->
+		<div class="form-group">
+			<label for="id_description">Description:</label>
+			<textarea name="description" id="id_description" required></textarea>
+		</div>
+
+		<!-- Submit Button -->
+		<input type="submit" value="create" />
+	</form>
+</main>
 {% endblock %}
